# claude-rust-desktop

./: .env.example  .gitignore  LICENSE  README.md  README.zh.md  SECURITY.md  build-apk-manual.ps1  build-apk.ps1  build_log.txt  check_build.py  docker-compose.browserless.yml  fix-api.cjs  fix-ts-errors.cjs  fix_path.ps1  index.html  mobile-remote.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
api-proxy/: package.json  server.js
scripts/: release.ps1  rollback.ps1  version.ps1
src/: App.tsx  adminApi.ts  api.ts  constants.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: aarch64-linux-android-clang.cmd  clang_android.cmd  clang_windows.cmd  clang_wrapper.cmd  config.toml  ndk-clang
src-tauri/.trae/specs/skill-execution-and-mcp-resources/: checklist.md  spec.md  tasks.md
src-tauri/capabilities/: default.json
src-tauri/config/: orchestration.toml
src-tauri/prd-creator/: index.html
src-tauri/remotion-studio/: index.html
src-tauri/src/: android_jni.rs  lib.rs  main.rs  preview_engine.rs  preview_engine_test.rs  remote.rs  secure_storage.rs  tool_loop.rs
src-tauri/src/agent_bus/: health.rs  mod.rs  workspace.rs
src-tauri/src/analytics/: mod.rs
src-tauri/src/api/: error.rs  state.rs
src-tauri/src/api/routes/: config.rs  filesystem.rs  health.rs  mod.rs  system.rs  tools.rs
src-tauri/src/app_studio/: mod.rs
src-tauri/src/ask_user/: mod.rs
src-tauri/src/bridge/: mod.rs  tests.rs
src-tauri/src/bridge/routes/: agents.rs  analytics.rs  caveman.rs  chat.rs  clipboard.rs  computer_use.rs  config.rs  conversations.rs  costs.rs  engines.rs  filesystem.rs  git.rs  h5.rs  ide.rs  im.rs  logs.rs  mcp.rs  memory.rs  mod.rs  notification.rs  preview.rs  process.rs  projects.rs  providers.rs  research.rs  skills.rs  sync.rs  system.rs  tasks.rs  terminal.rs  tools.rs  updater.rs  uploads.rs  watcher.rs  workflow.rs  worktrees.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: bridge.rs  feishu_chat.rs  mod.rs
src-tauri/src/computer_use/: browserless.rs  http_bridge.rs  mod.rs  sidecar.rs
src-tauri/src/config/: api_endpoints.rs  mod.rs
src-tauri/src/cost_tracker/: mod.rs
src-tauri/src/db/: conversation_repo.rs  diff_repo.rs  h5_repo.rs  im_config_repo.rs  im_permission_repo.rs  message_repo.rs  migration.rs  mod.rs  permission_repo.rs  project_repo.rs  schema.rs  task_repo.rs
src-tauri/src/diff/: mod.rs
src-tauri/src/document/: mod.rs
src-tauri/src/engine/: claude_code.rs  mod.rs
src-tauri/src/fs/: mod.rs  tests.rs
src-tauri/src/git/: mod.rs
src-tauri/src/github/: mod.rs
src-tauri/src/ide/: mod.rs
src-tauri/src/im_integration/: message_router.rs  mod.rs  permission_manager.rs  session_manager.rs
src-tauri/src/im_integration/adapters/: dingtalk_adapter.rs  feishu_adapter.rs  mod.rs  telegram_adapter.rs  wecom_adapter.rs
src-tauri/src/knowledge/: flow.rs  github_hub.rs  intel.rs  mod.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/mcp/: composio.rs  mod.rs  tool_executor.rs
src-tauri/src/memory/: caveman_rtk.rs  mod.rs
src-tauri/src/metrics/: mod.rs
src-tauri/src/multiagent/: mod.rs
src-tauri/src/native_engine/: anthropic_client.rs  context_compressor.rs  engine_core.rs  mod.rs  openai_client.rs  provider_manager.rs  session_manager.rs  task_context.rs  token_counter.rs  tool_loop.rs
src-tauri/src/notification/: mod.rs
src-tauri/src/orchestration/: config.rs  gstack.rs  mod.rs  openspace.rs  superpowers.rs  test_scenario.rs
src-tauri/src/permissions/: audit.rs  manager.rs  mod.rs  rules.rs
src-tauri/src/prefetch/: mod.rs
src-tauri/src/process/: mod.rs  tests.rs
src-tauri/src/project/: mod.rs
src-tauri/src/prompt/: mod.rs
src-tauri/src/remotion/: mod.rs
src-tauri/src/research/: mod.rs
src-tauri/src/sandbox/: mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/skills/: engine.rs  mod.rs  open_design.rs  open_design_test.rs
src-tauri/src/slash_commands/: mod.rs
src-tauri/src/streaming/: mod.rs  sse_parser.rs
src-tauri/src/task/: cron.rs  mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/tools/: macros.rs  mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/upload/: mod.rs
src-tauri/src/watcher/: mod.rs
src-tauri/src/worktree/: mod.rs
src-tauri/tests/: integration_tests.rs
src-tauri/worker/: Cargo.toml
src-tauri/worker/src/: browser.rs  desktop.rs  main.rs  server.rs
src/__tests__/: ClaudeLogo.test.tsx  errorHelpers.test.ts  setup.ts  useI18n.test.ts
src/api/: analytics.ts  artifacts.ts  auth.ts  chat.ts  client.ts  conversations.ts  engine.ts  fs.ts  github.ts  index.ts  projects.ts  providers.ts  research.ts  skills.ts  terminal.ts  upload.ts  user.ts  worktree.ts
src/components/: AddFromGithubModal.tsx  AgentExecutionView.tsx  AgentPanel.tsx  AnalyticsPanel.tsx  AppStudioPanel.tsx  ArtifactsPage.tsx  Auth.tsx  BrandIcons.tsx  ChatHeader.tsx  CodePanel.tsx  CodeViewer.tsx  CodeWorkspace.tsx  ComputerUsePanel.tsx  CostTracker.tsx  CustomizePage.tsx  DesignPage.tsx  DiffViewer.tsx  DirectoryModal.tsx  DocumentCreationProcess.tsx  DraggableDivider.tsx  EmbeddedBrowser.tsx  ErrorBoundary.tsx  FileExplorer.tsx  FileUploadPreview.tsx  GitBashRequiredModal.tsx  GitHubHubPanel.tsx  H5AccessPanel.tsx  H5ConnectionView.tsx  IMIntegrationPanel.tsx  Icons.tsx  KnowledgePanel.tsx  LivePreviewPanel.tsx  LivePreviewRenderer.tsx  MainContent.tsx  MarkdownRenderer.tsx  MarketplacePanel.tsx  McpManagementPanel.tsx  McpSettingsPage.tsx  McpSettingsPanel.tsx  MemoryPanel.tsx  (+32 more)
src/data/: defaultSkills.ts
src/hooks/: useAnalytics.ts  useAnnouncements.ts  useDesignSkills.ts  useI18n.ts  useLongPress.ts  useMobile.ts  useStreamSession.ts  useSwipeBack.ts  useZoom.ts
src/i18n/: index.ts
src/locales/: en.json  zh.json
src/services/: config.ts  designGenerationService.ts  localStorageService.ts  previewService.ts  remotionService.ts  secureStorage.ts  syncMockData.ts  syncService.ts
(+87 files in other folders)
