[package]
name = "claude-desktop-tauri"
version = "1.6.12"
description = "Claude Desktop - AI assistant with native capabilities (Tauri Edition)"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
walkdir = "2"
glob = "0.3"
regex = "1"
open = "5"
once_cell = "1"
local-ip-address = "0.6"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-haptics = "2"
tauri-plugin-barcode-scanner = "2"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-haptics = "2"
tauri-plugin-barcode-scanner = "2"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
