[package]
name = "claude-desktop-tauri"
version = "3.1.0"
description = "Claude Desktop - AI assistant with native capabilities (Tauri Edition)"
authors = ["you"]
edition = "2021"

[workspace]
members = ["worker"]

[lib]
name = "claude_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-haptics = "2"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-secure-storage = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
once_cell = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.24"
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = "0.16"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
async-trait = "0.1"
walkdir = "2"
glob = "0.3"
regex = "1"
open = "5"
urlencoding = "2"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
enigo = "0.2"
base64 = "0.22"
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
cron = "0.12"
diffy = "0.4"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
prometheus = "0.13"
ed25519-dalek = { version = "2", features = ["std"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
axum-test = "16"
http-body-util = "0.1"
tower = "0.5"
