[package]
name = "agent-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
enigo = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"